Fixing infopod icon alignment

--- a/src/components/InfoPod/InfoPodItem/InfoPodItem.module.css
+++ b/src/components/InfoPod/InfoPodItem/InfoPodItem.module.css
@@ -100,3 +100,7 @@
 .nameWithIcon {
   padding-left: 0.4em;
 }
+
+.value {
+  display: flex;
+}
